--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
   <meta name="description" content="김도연의 블로그 - 미대생의 일상">
   <meta name="keywords" content="김도연, 블로그, 디자인, 일상, 시각디자인">
   <link rel="stylesheet" href="blog.css">
+
+  <meta itemprop="name" content="김도연의 블로그" />
+  <meta itemprop="description" content="김도연의 블로그 - 미대생의 일상" />
+  <meta itemprop="image" content="" />
+
+
+  <meta property="og:url" content="https://p5km6mg5xf-hub.github.io/blog/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="김도연의 블로그" />
+  <meta property="og:description" content="김도연의 블로그 - 미대생의 일상" />
+  <meta property="og:image" content="" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="김도연의 블로그" />
+  <meta name="twitter:description" content="김도연의 블로그 - 미대생의 일상" />
+  <meta name="twitter:image" content="" />
+  
 </head>
 <body>
   <header>
