--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 
   <meta itemprop="name" content="김도연의 블로그" />
   <meta itemprop="description" content="김도연의 블로그 - 미대생의 일상" />
-  <meta itemprop="image" content="" />
+  <meta itemprop="image" content="blog_thumbnail.png" />
 
 
   <meta property="og:url" content="https://p5km6mg5xf-hub.github.io/blog/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="김도연의 블로그" />
   <meta property="og:description" content="김도연의 블로그 - 미대생의 일상" />
-  <meta property="og:image" content="" />
+  <meta property="og:image" content="blog_thumbnail.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="김도연의 블로그" />
   <meta name="twitter:description" content="김도연의 블로그 - 미대생의 일상" />
-  <meta name="twitter:image" content="" />
+  <meta name="twitter:image" content="blog_thumbnail.png" />
   
 </head>
 <body>
