--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <header>
-    <h1><a href="blog.html" class="black">김도연의 블로그</a></h1>
+    <h1><a href="index.html" class="black">김도연의 블로그</a></h1>
     <p><a href="https://www.swu.ac.kr/www/artdesignc_1.html" target="_blank">서울여자대학교 시각디자인전공</a> 2학년의 미대 일상</p>
   </header>
   <nav>
